Don't delete CopyOutputRequests when queueing a new Surface frame.

This reduces the risk that the CopyOutputRequests will be discarded
unnecessarily. This only affects CopyOutputRequests created through
SurfaceFactory::RequestCopyOfSurface, as requests submitted on
RenderPasses directly with the frame will still be discarded.

BUG=681988
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2695243006
Cr-Commit-Position: refs/heads/master@{#453807}

Former-commit-id: 37b0e1379938325304eeaff6afb9e7cb9f8bb618